[gd_scene load_steps=4 format=3 uid="uid://73o10yberub2"]

[ext_resource type="PackedScene" uid="uid://bw1v4880nbne5" path="res://Player/player.tscn" id="1_no4d0"]
[ext_resource type="Script" path="res://Environment/World.gd" id="1_ug3t1"]
[ext_resource type="PackedScene" uid="uid://cw1im2ibwrppe" path="res://Enemy/sword_skeleton.tscn" id="2_8l36j"]

[node name="World" type="Node2D" groups=["world"]]
script = ExtResource("1_ug3t1")

[node name="Physical_Obj_Base" type="Node" parent="." groups=["physical_obj_base"]]

[node name="Entity_Base" type="Node" parent="." groups=["entity_base"]]

[node name="Sword Skeleton" parent="Entity_Base" instance=ExtResource("2_8l36j")]
collision_layer = 1
collision_mask = 0

[node name="Player" parent="Entity_Base" instance=ExtResource("1_no4d0")]
position = Vector2(240, 116)
collision_layer = 1
platform_floor_layers = 4294967295
safe_margin = 0.08

[node name="Projectile_Base" type="Node" parent="." groups=["projectile_base"]]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -176.0
offset_top = -149.0
offset_right = 151.0
offset_bottom = 153.0
